Update aboutUs.html UPDATE

--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -60,7 +60,7 @@
                 </a>
             </nav>
         </section>
-            <h3 class="aboutHeader">ABOUT KEITH CAKES</h3>
+            <h3 class="aboutHeader">ABOUT KEITH CAKES and Mohamed Saleh</h3>
             <aside class="aboutImgLeft">
                 <img src="../images/about01.jpg" alt="">
             </aside>
